--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,7 +38,9 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/api/users, roles: ROLE_USER }
+        # - { path: ^/api/users, roles: ROLE_USER }
+        - { path: ^/api/utilisateurs, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/produits, roles: PUBLIC_ACCESS }
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
 
 when@test:
